# SecureVault-C-File-Encrypter-GUI

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat
include/: AlgoEnum.h  CryptoEngine.h  DropZone.h  EncryptionWorker.h  ErrorEnum.h  FileManager.h  KeyDeriver.h  mainwindow.h
src/: CryptoEngine.cpp  DropZone.cpp  EncryptionWorker.cpp  FileManager.cpp  KeyDeriver.cpp  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
